<!--
  ~    Copyright 2017. iota9star
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">ACG.RIP</string>
    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="about">关于</string>
    <string name="search_hint">请输入关键字…</string>
    <string name="source">来源</string>
    <string name="version">版本</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="all">全部</string>
    <string name="anime">动画</string>
    <string name="jp_tv">日剧</string>
    <string name="music">音乐</string>
    <string name="collection">合集</string>
    <string name="other">其他</string>
    <string name="variety">综艺</string>
    <string name="more">更多</string>
    <string name="download">下载</string>
    <string name="info">详情</string>
    <string name="thx">感谢</string>
    <string name="thx_content">感谢ACG.RIP及其所有发布组\n感谢开源世界</string>
    <string name="is_good">觉得不错的话</string>
    <string name="grade_app">给我评分</string>
    <string name="acg_rip">https://acg.rip/</string>
    <string name="week">每周</string>
    <string name="search_view_hit">请输入关键字</string>
    <string name="theme">主题</string>
    <string name="nightly">夜间模式</string>
    <string name="tint_toolbar">标题栏随主题变色</string>
    <string name="diy_theme">自定义主题</string>
    <string name="default_theme">默认</string>
    <string name="main_theme_settings">主要</string>
</resources>
