<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2017. iota9star
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_week"
            android:checkable="true"
            android:icon="@drawable/ic_week_black_24dp"
            android:title="@string/week" />
        <item
            android:id="@+id/action_list"
            android:checkable="true"
            android:icon="@drawable/ic_all_black_24dp"
            android:title="@string/all" />
        <item
            android:id="@+id/action_anime"
            android:checkable="true"
            android:icon="@drawable/ic_anime_black_24dp"
            android:title="@string/anime" />
        <item
            android:id="@+id/action_jp_tv"
            android:checkable="true"
            android:icon="@drawable/ic_jp_tv_black_24dp"
            android:title="@string/jp_tv" />
        <item
            android:id="@+id/action_variety"
            android:checkable="true"
            android:icon="@drawable/ic_variety_black_24dp"
            android:title="@string/variety" />
        <item
            android:id="@+id/action_music"
            android:checkable="true"
            android:icon="@drawable/ic_music_black_24dp"
            android:title="@string/music" />
        <item
            android:id="@+id/action_collection"
            android:checkable="true"
            android:icon="@drawable/ic_collection_black_24dp"
            android:title="@string/collection" />
        <item
            android:id="@+id/action_other"
            android:checkable="true"
            android:icon="@drawable/ic_others_black_24dp"
            android:title="@string/other" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/action_theme"
                android:checkable="true"
                android:icon="@drawable/ic_label_outline_black_24dp"
                android:title="@string/theme" />
            <item
                android:id="@+id/action_about"
                android:checkable="true"
                android:icon="@drawable/ic_about_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
