<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/v8dp"
    android:layout_marginLeft="@dimen/v8dp"
    android:layout_marginRight="@dimen/v8dp"
    android:layout_marginStart="@dimen/v8dp"
    android:layout_marginTop="@dimen/v8dp"
    android:background="@drawable/bg_item"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:textColor="#60e16b8c"
            android:textSize="@dimen/v24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/v8dp"
            android:shadowColor="#24242424"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:textColor="#303030"
            android:textSize="@dimen/v12sp"
            android:textStyle="bold" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_controll"
        android:gravity="center"
        android:padding="@dimen/v2dp">

        <TextView
            android:id="@+id/text_view_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textSize="@dimen/v10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textSize="@dimen/v10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="@dimen/v36dp"
            android:layout_height="@dimen/v20dp"
            android:layout_margin="@dimen/v2dp"
            android:background="@drawable/bg_button"
            android:text="@string/sub"
            android:textSize="@dimen/v10sp" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="@dimen/v36dp"
            android:layout_height="@dimen/v20dp"
            android:layout_margin="@dimen/v2dp"
            android:background="@drawable/bg_button"
            android:text="@string/info"
            android:textSize="@dimen/v10sp" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="@dimen/v36dp"
            android:layout_height="@dimen/v20dp"
            android:layout_margin="@dimen/v2dp"
            android:background="@drawable/bg_button"
            android:text="@string/share"
            android:textSize="@dimen/v10sp" />

        <Button
            android:id="@+id/button_download"
            android:layout_width="@dimen/v36dp"
            android:layout_height="@dimen/v20dp"
            android:layout_margin="@dimen/v2dp"
            android:background="@drawable/bg_button"
            android:text="@string/download"
            android:textSize="@dimen/v10sp" />
    </LinearLayout>
</LinearLayout>
